# calculatorAPI

./: Cargo.toml  Dockerfile
src/: api.rs  eval.rs  main.rs
src/api/: add.rs  div.rs  mult.rs  sub.rs
