[package]
name = "midas_social"
version = "0.1.0"
authors = ["joão Pedro Abreu de Souza <jp_abreu@id.uff.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0"
serde = "1.0.111"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"